# hkjc-scraper

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  HK33_OPTIMIZATION.md  HORSE_PROFILE_IMPLEMENTATION.md  Makefile  README.md  ROADMAP.md  SUPABASE_SETUP.md  alembic.ini  config.py  data_model.md  database.py  docker-compose.yml  hkjc_scraper.py  main.py  models.py  persistence.py  pyproject.toml  requirements.txt  schema.sql
alembic/: env.py
alembic/versions/: 0c1da0fdcc74_refactor_horse_profile_history_to_horse_.py  28cab3607e19_add_unique_constraint_to_jockey_and_.py  38e7c088ce19_make_jockey_and_trainer_code_nullable_.py  676929856237_initial_schema_9_tables_with_.py  a650ac14fa0b_make_horse_code_name_unique.py  bd904aa1d43c_merge_horse_and_profile_tables.py  d2a6620d97e6_initial_schema_merged_horse_tables.py
docker/: init.sql
docs/: api_reference.md  user_guide.md
docs/plans/: 2026-02-23-db-schema-fixes-design.md  2026-02-23-db-schema-fixes-plan.md  2026-03-04-hkjc-profile-scraping-design.md  2026-03-04-hkjc-profile-scraping.md  2026-03-04-hkjc-spider-refactor-design.md  2026-03-04-hkjc-spider-refactor.md  2026-03-05-codebase-refactoring-design.md  2026-03-05-fix-horse-profile-parsing-design.md  2026-03-05-fix-horse-profile-parsing.md  2026-03-05-sectional-time-scraping-design.md  2026-03-05-sectional-time-scraping.md  2026-03-06-historical-race-discovery-design.md  2026-03-06-historical-race-discovery.md  2026-03-11-scrapling-native-design.md  2026-03-11-scrapling-native-implementation.md
migrations/: env.py
migrations/versions/: 9873688e6277_enforce_hkjc_horse_id_not_null.py  afca63e32d55_initial_schema_with_composite_unique_.py  b1c2d3e4f5a6_add_hk33_tables.py  f7057e29a843_add_runner_gear_race_sectional_times.py
src/hkjc_scraper/: __init__.py  __main__.py  analytics.py  cache.py  cli.py  common.py  config.py  data_parsers.py  database.py  exceptions.py  hk33_login.py  hk33_scraper.py  horse_parsers.py  http_utils.py  id_parsers.py  jockey_trainer_parsers.py  models.py  parsers.py  persistence.py  profile_parsers.py  scraper.py  spider.py  spider_v2.py  utils.py  validators.py
tests/: __init__.py  conftest.py  integration_test.py  test_analytics.py  test_cache.py  test_cli.py  test_database.py  test_error_handling.py  test_http_utils.py  test_parsers.py  test_persistence_merge.py  test_profile_parsers.py  test_scraper_profile.py  test_spider.py  test_utils.py  test_validators.py
tests/fixtures/: conftest.py  sample_race.html
tests/integration/: test_database.py  test_database_import.py.bak  test_historical_discovery.py  test_profile_scraping.py  test_sectional_times.py
